--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -18,7 +19,9 @@
         android:gravity="end|center"
         android:inputType="textPersonName"
         android:text="0"
-        android:textSize="40pt" />
+        android:textColor="#FFFFFF"
+        android:textSize="96sp"
+        android:typeface="normal" />
 
     <TableLayout
         android:layout_width="match_parent"
@@ -33,18 +36,13 @@
                 android:width="30pt"
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
+                android:scrollHorizontally="false"
+                android:selectAllOnFocus="false"
                 android:text="√"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/buSquare"
-                android:layout_marginRight="1pt"
-                android:layout_weight="1"
-                android:width="30pt"
-                android:height="30pt"
-                android:backgroundTint="@color/blue"
-                android:text="x²"
-                android:textSize="24sp" />
+                android:textColor="#318BCE"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <Button
                 android:id="@+id/buPower"
@@ -54,7 +52,10 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="xⁿ"
-                android:textSize="24sp" />
+                android:textColor="#318BCE"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <Button
                 android:id="@+id/buLn"
@@ -64,7 +65,24 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="ln"
-                android:textSize="24sp" />
+                android:textColor="#318BCE"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
+
+            <Button
+                android:id="@+id/buSquare"
+                android:layout_width="12dp"
+                android:layout_marginRight="1pt"
+                android:layout_weight="1"
+                android:width="30pt"
+                android:height="30pt"
+                android:backgroundTint="@color/blue"
+                android:text="x²"
+                android:textColor="#318BCE"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
         </TableRow>
 
         <TableRow>
@@ -77,7 +95,10 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="sin"
-                android:textSize="24sp" />
+                android:textColor="#318BCE"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <Button
                 android:id="@+id/buCos"
@@ -87,7 +108,10 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="cos"
-                android:textSize="24sp" />
+                android:textColor="#318BCE"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <Button
                 android:id="@+id/buTan"
@@ -97,7 +121,10 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="tan"
-                android:textSize="24sp" />
+                android:textColor="#318BCE"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <Button
                 android:id="@+id/buLog"
@@ -107,7 +134,11 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="log"
-                android:textSize="24sp" />
+                android:textAllCaps="false"
+                android:textColor="#318BCE"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
         </TableRow>
 
         <TableRow>
@@ -120,7 +151,11 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="AC"
-                android:textSize="24sp" />
+                android:textAlignment="center"
+                android:textColor="#318BCE"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <Button
                 android:id="@+id/buPlusMinus"
@@ -130,7 +165,10 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="+/-"
-                android:textSize="24sp" />
+                android:textColor="#318BCE"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <Button
                 android:id="@+id/buPercent"
@@ -140,7 +178,10 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="%"
-                android:textSize="24sp" />
+                android:textColor="#318BCE"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <Button
                 android:id="@+id/buDelete"
@@ -150,7 +191,10 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="DEL"
-                android:textSize="24sp" />
+                android:textColor="#318BCE"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
         </TableRow>
 
         <TableRow>
@@ -163,7 +207,9 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="7"
-                android:textSize="24sp" />
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <Button
                 android:id="@+id/bu8"
@@ -173,7 +219,9 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="8"
-                android:textSize="24sp" />
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <Button
                 android:id="@+id/bu9"
@@ -183,7 +231,9 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="9"
-                android:textSize="24sp" />
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <Button
                 android:id="@+id/buMul"
@@ -193,7 +243,10 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="X"
-                android:textSize="24sp" />
+                android:textColor="#318BCE"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
         </TableRow>
 
         <TableRow>
@@ -206,7 +259,9 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="4"
-                android:textSize="24sp" />
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <Button
                 android:id="@+id/bu5"
@@ -216,7 +271,9 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="5"
-                android:textSize="24sp" />
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <Button
                 android:id="@+id/bu6"
@@ -226,7 +283,9 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="6"
-                android:textSize="24sp" />
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <Button
                 android:id="@+id/buDev"
@@ -236,8 +295,12 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="/"
-                android:textSize="24sp" />
+                android:textColor="#318BCE"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
         </TableRow>
+
         <TableRow>
 
             <Button
@@ -248,7 +311,9 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="1"
-                android:textSize="24sp" />
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <Button
                 android:id="@+id/bu2"
@@ -258,7 +323,9 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="2"
-                android:textSize="24sp" />
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <Button
                 android:id="@+id/bu3"
@@ -268,7 +335,9 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="3"
-                android:textSize="24sp" />
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <Button
                 android:id="@+id/buMinus"
@@ -278,7 +347,10 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="-"
-                android:textSize="24sp" />
+                android:textColor="#318BCE"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
         </TableRow>
 
         <TableRow>
@@ -291,7 +363,9 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="0"
-                android:textSize="24sp" />
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <Button
                 android:id="@+id/buDot"
@@ -301,7 +375,8 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="."
-                android:textSize="24sp" />
+                android:textSize="34sp"
+                android:typeface="normal" />
 
             <Button
                 android:id="@+id/buEquals"
@@ -311,7 +386,10 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="="
-                android:textSize="24sp" />
+                android:textColor="#318BCE"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <Button
                 android:id="@+id/buPlus"
@@ -321,7 +399,10 @@
                 android:height="30pt"
                 android:backgroundTint="@color/blue"
                 android:text="+"
-                android:textSize="24sp" />
+                android:textColor="#318BCE"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
         </TableRow>
 
     </TableLayout>
