--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
+    <color name="black">#FFff0000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue">#01578B</color>
-    <color name="gray">#81D4FA</color>
+    <color name="blue">#403e3d</color>
+    <color name="gray">#000000</color>
+    <color name="cyan">#000000</color>
 </resources>
